objects/ZMG__Zoomerang_Widget__c.object
<CustomObject>
    <fields>
        <fullName>ZMG__Background_Color__c</fullName>
        <label>Background Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZMG__Display_Response_Count__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Response Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZMG__Edit_Redirect_URL__c</fullName>
        <label>Edit Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZMG__Initialized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initialized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZMG__Publisher__c</fullName>
        <label>Publisher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZMG__Query_Params__c</fullName>
        <description>parameter string to be sent in the URL when callout for this widget is made to Zoomerang.</description>
        <label>Query Params</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZMG__Question_ID__c</fullName>
        <description>Zoomerang record ID of the question being used in the widget (if applicable).</description>
        <label>Question ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZMG__Results_Redirect_URL__c</fullName>
        <label>Results Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZMG__Script_Tag_URL__c</fullName>
        <label>Script Tag URL</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZMG__Show_Sample_If_Not_Initialized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Sample If Not Initialized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZMG__Slot__c</fullName>
        <label>Slot</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZMG__Survey_ID__c</fullName>
        <description>Zoomerang record ID for the survey being visualized in the widget.</description>
        <label>Survey ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZMG__Survey_Name__c</fullName>
        <label>Survey Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZMG__Widget_Type__c</fullName>
        <label>Widget Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregate</fullName>
                </value>
                <value>
                    <fullName>Survey Specific</fullName>
                </value>
                <value>
                    <fullName>Blogger Widget</fullName>
                </value>
                <value>
                    <fullName>NPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Zoomerang Widget</label>
    <listViews>
        <fullName>ZMG__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Widget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoomerang Widgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>